--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "ORDER_STATUS_CREATED: 'created',\r ORDER_STATUS_PLACED: 'placed',\r ORDER_STATUS_CANCELLED: 'cancelled',\r ORDER_STATUS_USER_CANCELLED: 'usercancelled',\r ORDER_STATUS_ACCEPTED: 'accepted',\r ORDER_STATUS_IN_PROGRESS: 'inprogress',\r ORDER_STATUS_RETURN_IN_PROGRESS: 'returninprogress',\r ORDER_STATUS_FULFILLED: 'fulfilled',\r ORDER_STATUS_CLOSED: 'closed',",
   "main": "index.js",
+  "typings": "./index.d.ts", 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
